# neris-dashboards

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
apps/cornsacks/: .gitignore  __init__.py  app.py  callbacks.py  config.py  layout.py  pyproject.toml  tables.py
apps/cornsacks/assets/: custom.css  map_utils.js
cloud/: aws.py
docker/: dev.Dockerfile  entrypoint.sh
libs/neris-dash-common/: README.md  pyproject.toml
libs/neris-dash-common/neris_dash_common/: __init__.py  aggregations.py  auth.py  components.py  data.py  export.py  filters.py  theme.py  utils.py
scripts/: deploy-dash-enterprise.sh
